--- a/index.html
+++ b/index.html
@@ -1,68 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gemini AI Chat</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    /* Custom scrollbar for webkit browsers */
-    ::-webkit-scrollbar {
-      width: 6px;
-    }
-    ::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    ::-webkit-scrollbar-thumb {
-      background: #4a4a4a;
-      border-radius: 3px;
-    }
-    ::-webkit-scrollbar-thumb:hover {
-      background: #5a5a5a;
-    }
-    /* Styles for Markdown rendering */
-    .prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
-        color: white;
-        font-weight: 600;
-        margin-top: 1em;
-        margin-bottom: 0.5em;
-    }
-    .prose h1 { font-size: 1.875rem; }
-    .prose h2 { font-size: 1.5rem; }
-    .prose h3 { font-size: 1.25rem; }
-    .prose h4 { font-size: 1.125rem; }
-    .prose ul {
-        list-style-type: disc;
-        padding-left: 1.5rem;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
-    }
-    .prose li {
-        margin-bottom: 0.25em;
-    }
-    .prose p {
-        margin-bottom: 0.75em;
-        line-height: 1.6;
-    }
-    .prose strong, .prose b {
-        font-weight: 700;
-    }
-  </style>
-  <script type="importmap">
-    {
-      "imports": {
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-        "marked": "https://aistudiocdn.com/marked@^14.0.0"
-      }
-    }
-  </script>
-<link rel="stylesheet" href="/index.css">
-</head>
-<body class="bg-black">
-  <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clinical Chatbot</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
